<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>i2c_com</name>
  <version>0.0.1</version>
  <description>I2C communication driver</description>
  <maintainer email="vinaya.rvce@gmail.com">vk</maintainer>
  <license>MIT</license>

  <build_depend>i2c</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
