<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_sensor</name>
  <version>0.0.1</version>
  <description>MIU sensor driver</description>
  <maintainer email="vinaya.rvce@gmail.com">vk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>i2c_com</build_depend>
  <exec_depend>i2c_com</exec_depend>

  <build_depend>nandhi_msg_types</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
