<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ego_viz</name>
  <version>0.0.1</version>
  <description>A ROS2 package that recvies topics on ego sensor and publishes ros2 viz topics</description>
  <maintainer email="8676836+Aarivvk@users.noreply.github.com">vk</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>nandhi_msg_types</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
