<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>distance</name>
  <version>0.0.0</version>
  <description>A sample distance sensor</description>
  <maintainer email="8676836+Aarivvk@users.noreply.github.com">arrivvk</maintainer>
  <license>Apache 2.0</license>
  <author>arrivvk</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>